src/Components/SearchPageComponent/SearchPageStyle.css
header h1 {
	
	
	text-align: center;
	
	margin-top: 80px;
}

main {
	width: 90%;
	max-width: 960px;
	margin: 0 auto;
}

section {
	padding: 15px;
}

.searchbox {
	display: block;
	width: 90%;
	padding: 15px;
    height:20px;
	border: none;
	outline: none;
	

	
	border-radius: 8px;

	color: #53565A;
	font-size: 20px;
	font-weight: 300;
margin-right: 10px;
	transition: 0.4s ease-out;
}

.searchbox:focus {
	box-shadow: 0px 0px 8px 3px #4484C4;
}

.results {
	display: flex;
	flex-wrap: wrap;
	margin: 0px -15px;
	 
}

.results .result {
	width: 25%;
	min-width: 250px;
    padding: 5px;
    margin:10px;
    border-radius: 10px;
	display: flex;
	flex-direction: column;
    cursor: pointer;
    background-color: rgb(255, 255, 255);
}

.results .result img {
	display: block;
	width: 100%;
    margin-bottom: 5px;
    border-radius:10px;
}

.results .result h3 {
	color: rgb(0, 0, 0);
	text-align: center;
	font-size: 20px;
	font-weight: 600;
	padding: 5px;
	/* background: #0a72da; */
	flex: 1 1 100%;
    transition: 0.4s ease-out;
    border-radius:5px;
    margin-bottom: 5px;
}

.results .result:hover  {
	box-shadow: -1px 10px 29px 0px rgba(0, 0, 0, 0.8);
}

.popup {
	position: fixed;
	top: 0;
	left: 0;
	width: 100vw;
	height: 100vh;
	background-color: #000000;
    
	overflow-y: scroll;
}

.popup .content {
	display: block;
	width: 100%;
	align-self: center;
	max-width: 960px;
	margin: 0 auto;
	padding: 25px;

	color: #FFF;
}
.con{
	
	margin: 0px -15px 30px;
	padding: 10px;
	/* border: rgb(0, 183, 255) double 5px;
	box-shadow: rgb(5, 5, 5) 5px 5px; */
	display: flex;
	flex-wrap: wrap;
	flex-direction: column;
	border-radius: 20px;
	text-align: center;
}
.popup .content h2 {
	font-size: 48px;
	font-weight: 600;
	font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
	text-shadow: black 2.5px 2.5px;
}
.popup .content h2 span {
	font-weight: 300;
	font-size: 48px;
}

.popup .plot .pa  {
	font-size: 22px;
	
}

.popup .content .plot {
	display: flex;
	flex-direction: row;
	flex-wrap: wrap;
	/* background-color: #1c91ff; */
	margin: 0px -10px 30px;
	padding: 20px;
	/* border-radius: 20px;
	border: crimson double 5px;
	box-shadow: rgb(5, 5, 5) 5px 5px; */
}

.popup .content .plot img {
	flex: 1 1 50%;
	max-width: 300px;
	padding: 0px 15px;
}

.popup .content .plot .pa {
	flex: 1 1 40%;
	padding: 35px;
	/* top: 50%; */
}

.popup .content .close {
	display: inline-block;
	padding: 15px 30px;
	font-size: 18px;
	font-weight: 700;
    /* margin: auto; */
	background: whitesmoke;
	color: rgb(211, 0, 0);
	border-radius: 8px;
	/* border: darkturquoise 5px double; */
	outline: none;
	appearance: none;
	cursor: pointer;
    margin-left: 50%;
	transition: 0.4s ease-out;
}

.popup .content .close:hover {
	background: #223343;
}
.but{
   
    
	align-self: center;
	justify-self: center;
	

}
.searchbox-wrap{
	display: flex;
	
}
@media (max-width: 760px){
	.searchbox-wrap{
	  flex-direction: column;
	}
	.searchbox{
		height:10px;
		margin-bottom: 10px;
	}
	.results{
		flex-direction: column;
		margin: auto;
	  }
	  .popup .content .close{
		  margin-left: 30%;
	  }
	  .but{
		 
		  margin: 20px;
		  height:40px;
	  }
	  .results .result{
          min-width: 250px;
          margin-left: auto;
	  }
  }
  .pa span{
	  background-color: #fdfeff;
	  color: rgb(3, 3, 3);
	  /* padding: 5px; */
	  border-radius: 10px;
	  margin: 20px;
	  
  }








.wrapper{
	display: flex;
	width: 90%;
	justify-content: space-around;
	flex-wrap: wrap;
	align-items: center;
}

  .content_s {
	display: flex;
	margin: 0 auto;
	justify-content: center;
	align-items: center;
	flex-wrap: wrap;
	max-width: 1000px;
  }
  
  .heading_s {
	width: 100%;
	margin-left: 1rem;
	font-weight: 900;
	font-size: 1.618rem;
	text-transform: uppercase;
	letter-spacing: 0.1ch;
	line-height: 1;
	padding-bottom: 0.5em;
	margin-bottom: 1rem;
	position: relative;
  }
  .heading_s:after {
	display: block;
	content: "";
	position: absolute;
	width: 60px;
	height: 4px;
	background: linear-gradient(135deg, #1a9be6, #1a57e6);
	bottom: 0;
  }
  
  .description_s {
	width: 100%;
	margin-top: 0;
	margin-left: 1rem;
	margin-bottom: 3rem;
  }
  
  .card_s {
	color: inherit;
	cursor: pointer;
	width: calc(33% - 2rem);
	min-width: calc(33% - 2rem);
	height: 400px;
	min-height: 400px;
	perspective: 1000px;
	margin: 1rem;
	position: relative;
  }
  @media screen and (max-width: 800px) {
	.card_s {
	  width: 50% ;
	}
  }
  @media screen and (max-width: 500px) {
	.card_s {
	  width: 100%;
	}
  }
  
  .front_s,
  .back_s {
	display: flex;
	border-radius: 6px;
	background-position: center;
	background-size: cover;
	text-align: center;
	justify-content: center;
	align-items: center;
	position: absolute;
	height: 100%;
	width: 100%;
	-webkit-backface-visibility: hidden;
	backface-visibility: hidden;
	transform-style: preserve-3d;
	transition: ease-in-out 600ms;
  }
  
  .front_s {
	background-size: cover;
	box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
	font-size: 1.618rem;
	font-weight: 600;
	color: #fff;
	overflow: hidden;
	font-family: Poppins, sans-serif;
  }

  .card_s:hover .front_s {
	transform: rotateY(180deg);
  }
  .card_s:nth-child(even):hover .front_s {
	transform: rotateY(-180deg);
  }
  
  .back_s {
	
box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
backdrop-filter: blur( 3.5px );
-webkit-backdrop-filter: blur( 3.5px );
	transform: rotateY(-180deg);
	
  }
  
  .card_s:hover .back_s {
	transform: rotateY(0deg);
  }
  .card_s:nth-child(even) .back_s {
	transform: rotateY(180deg);
  }

  .card_s:nth-child(even):hover .back_s {
	transform: rotateY(0deg);
  }
  
.share_but_s{
	margin-top: 10px;
}
   .button_s {
	transform: translateZ(40px);
	cursor: pointer;
	-webkit-backface-visibility: hidden;
	backface-visibility: hidden;
	font-weight: bold;
	color: #ffffff;
	padding: 0.5em 1em;
	width: 150px;
	font: inherit;
	border: none;
	position: relative;
	
	transition: 300ms ease;
	
  }

   .button_s:hover {
	transform: translateZ(55px);
  }
  .button_s:hover:before {
	transform: translateZ(-55px);
  }
  .button_s:active {
	transform: translateZ(20px);
  }
  .button_s:active:before {
	transform: translateZ(-20px);
	top: 12px;
  }

